--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: mestruacao
+name: ciclozen
 description: "A new Flutter project."
 
 publish_to: 'none'
@@ -14,13 +14,27 @@ dependencies:
   table_calendar: ^3.0.8
   intl: ^0.18.0
   shared_preferences: ^2.1.1
+  sqflite: ^2.3.0
+  path: ^1.8.3
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^5.0.0
+  flutter_launcher_icons: ^0.13.1
 
 flutter:
   uses-material-design: true
   assets:
     - assets/mestruacao.png
+
+flutter_icons:
+  android: true
+  ios: true
+  macos:
+    generate: true
+  windows:
+    generate: true
+  web:
+    generate: true
+  image_path: "assets/logo.jpeg"
