--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,12 +16,14 @@ dependencies:
   shared_preferences: ^2.1.1
   sqflite: ^2.3.0
   path: ^1.8.3
+  sqflite_common_ffi:
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^5.0.0
   flutter_launcher_icons: ^0.13.1
+ 
 
 flutter:
   uses-material-design: true
