--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,8 @@ dependencies:
   windows_notification: ^1.3.0
   sqflite_common_ffi:
   smooth_page_indicator: ^1.1.0
+  flutter_local_notifications: ^13.0.0
+  timezone: ^0.9.2
   
 
 dev_dependencies:
